kuber/deployment-redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:6.2.6-alpine3.14
        ports:
        - containerPort: 6379
        volumeMounts:
        - mountPath: /data
          name: data
        resources:
          requests:
            cpu: 100m
            memory: 250Mi
          limits:
            cpu: 100m
            memory: 250Mi
        livenessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 30
          timeoutSeconds: 5
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: redis-volume
