kuber/service-flaskapp.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flask-app
spec:
  ports:
    - port: 8080
      targetPort: 5000
  selector:
    app: flask
  type: ClusterIP
